# AIHack

./: .gitignore  BUILD_GUIDE.md  CHANGELOG.md  Cargo.toml  DESIGN_DECISIONS.md  GAP_CLOSURE_ROADMAP.md  IMPLEMENTATION_SUMMARY.md  LICENSE  README.md  REFACTORING_ARCHIVE.md  REFACTORING_ROADMAP_R7.md  STABILIZATION_ROADMAP.md  audit_roadmap.md  build.bat  build.err  build.sh  designs.md  errors.json  implementation_summary.md  spec.md
.omx/context/: phase1-headless-core-20260428T063401Z.md  phase2-map-movement-doors-vision-20260428T070214Z.md  phase3-combat-death-20260428T112628Z.md  phase4-items-inventory-20260428T130145Z.md  phase5-levels-stairs-20260428T171951Z.md  tui-modernization-refactor-20260428T061732Z.md
.omx/plans/: phase-1-headless-core-plan.md  prd-phase1-headless-core.md  prd-phase2-map-movement-doors-vision.md  prd-phase3-combat-death.md  prd-phase4-items-inventory.md  prd-phase5-levels-stairs.md  test-spec-phase1-headless-core.md  test-spec-phase2-map-movement-doors-vision.md  test-spec-phase3-combat-death.md  test-spec-phase4-items-inventory.md  test-spec-phase5-levels-stairs.md
assets/data/: monsters.toml
legacy_nethack_port_reference/: AIHACK_REWRITE_VS_REPAIR_REPORT.md  CHANGELOG.md  Cargo.toml  DESIGN_DECISIONS.md  IMPLEMENTATION_SUMMARY.md  LESSONS_LEARNED.md  LICENSE.NGPL  REFERENCE_INDEX.md  ROGUELIKE_LOGIC_REFERENCE.md  STABILIZATION_ROADMAP.md  audit_roadmap.md  build.ps1  build.rs  build2.err  build_throw.err  designs.md  options.toml  spec.md
legacy_nethack_port_reference/src/: app.rs  app_update.rs  game_ui.rs  main.rs
src/: app.rs  app_update.rs  game_loop.rs  game_ui.rs  input_handler.rs  lib.rs  main.rs
src/assets/: symbols.rs
src/core/: action.rs  action_queue.rs  context.rs  error.rs  event.rs  events.rs  game_state.rs  ids.rs  mod.rs  observation.rs  position.rs  rng.rs  role.rs  save.rs  save_ext.rs  save_phase1_ext.rs  (+4 more)
tests/: action_space.rs  ai_api_schema.rs  combat.rs  data_loading.rs  death.rs  doors.rs  e2e_edge_cases.rs  e2e_stabilize.rs  e2e_verbs.rs  e3_integration.rs  golden_phase8_rules.rs  inventory.rs  items.rs  levels.rs  llm_decision_support.rs  llm_narrative.rs  map.rs  monster_ai.rs  movement.rs  observation.rs  projectiles.rs  release_candidate.rs  replay.rs  save_load.rs  stairs.rs  traps.rs  ui_debug.rs  ui_effect_projection.rs  ui_input_mapping.rs  ui_labels.rs  ui_layout.rs  ui_runtime_smoke.rs  ui_screens.rs  vision.rs
(+589 files in other folders)
