[package]
name = "aihack"
version = "3.0.0-alpha.2"
edition = "2021"
authors = ["방은호 (Eunho Bang)"]
license = "Apache-2.0"
license-file = "LICENSE.NGPL"
repository = "https://github.com/Yupkidangju/AIHack"
homepage = "https://github.com/Yupkidangju/AIHack"
description = "AIHack — A modern Rust roguelike inspired by classic dungeon crawlers. Based on NetHack 3.6.7 (NGPL)."

[dependencies]
# UI Frameworks
ratatui = "0.26"
eframe = "0.27"     # egui framework for native windows
crossterm = "0.27"

# ECS Engine
legion = "0.4"      # High-performance ECS

# Data & Logic
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
rand = "0.8"
bitflags = { version = "2.4", features = ["serde"] }
serde_repr = "0.1"
lazy_static = "1.4"
thiserror = "2.0.18"

# [v3.0.0 E4] LLM Engine (smaLLM 이식)
reqwest = { version = "0.12", features = ["json", "blocking"] }
sysinfo = "0.30"
regex = "1.12"

# [v3.0.0 E4] Windows Process Management
[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winbase", "winnt", "fileapi"] }

[dev-dependencies]
pretty_assertions = "1.4"
