[package]
name = "aihack"
version = "0.1.0"
edition = "2021"
license = "UNLICENSED"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
rand = "0.8"
clap = { version = "4", features = ["derive"] }

[[bin]]
name = "aihack"
path = "src/main.rs"

[[bin]]
name = "aihack-headless"
path = "src/bin/aihack-headless.rs"
